--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
+    "prettier": "^1.8.2",
     "promise": "8.0.1",
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
